Initial correction of the duplicates algorithm
